--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+crew_log.txt
+db
+crewai_analise_requisitos
+features
+data.json
+exemplos_casos_usos.txt
+analise.pdf
