--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,4 +22,5 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - run: ls -la
+    - run: yarn install
+    - run: yarn test
