--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,5 +22,15 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - run: yarn install
-    - run: yarn test
+    
+    - name: Instalar dependências
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Verificar versão do Python
+      run: python --version
+
+    - name: Rodar testes (exemplo com pytest)
+      run: |
+        if [ -f pytest.ini ] || [ -d tests ]; then pytest; else echo "Sem testes configurados."; fi
