--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Test.Ai CI - Continuous Integration
+name: Python CI/CD Pipeline
 
 on:
   push:
@@ -7,30 +7,69 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+  # CI - Testes e verificação
+  ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.x]
+        python-version: [3.x]  # Testando em múltiplas versões do Python
 
     steps:
-    #Setup
-    - uses: actions/checkout@v4
+    - name: Checkout do código
+      uses: actions/checkout@v4
+    
+    # Configuração do Python
     - name: Configurar Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     
+    # Instalar dependências
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Verificar versão do Python
-      run: python --version
-
-    - name: Rodar testes (exemplo com pytest)
+        pip install -r requirements.txt
+    
+    # Verificar qualidade do código com flake8
+    - name: Verificar qualidade do código com flake8
       run: |
-        if [ -f pytest.ini ] || [ -d tests ]; then pytest; else echo "Sem testes configurados."; fi
+        pip install flake8
+        flake8 .
+    
+    # Rodar testes com pytest
+    - name: Rodar testes com pytest
+      run: |
+        pytest
+    
+  # CD - Construção da imagem Docker e deploy
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci  # Certificar-se de que o job 'ci' seja concluído antes
+    if: github.ref == 'refs/heads/main'  # Deploy só ocorre quando o código está na branch 'main'
+
+    steps:
+    - name: Checkout do código
+      uses: actions/checkout@v4
+    
+    # Construir a imagem Docker
+    - name: Construir a imagem Docker
+      run: |
+        docker build -t my-python-app:latest .
+
+    # Login no Docker Hub
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
+    # Push da imagem Docker para o Docker Hub
+    - name: Push da imagem Docker
+      run: |
+        docker tag my-python-app:latest ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
+
+    # Deploy para servidor remoto (Exemplo)
+    - name: Deploy para servidor remoto
+      run: |
+        ssh user@your-server-ip "docker pull ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest && docker run -d ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest"
