--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,10 +31,11 @@ jobs:
         pip install -r requirements.txt
     
     # Verificar qualidade do código com flake8
+    # Verificar qualidade do código com flake8 (ignorando erros específicos)
     - name: Verificar qualidade do código com flake8
       run: |
-        pip install flake8
-        flake8 .
+        flake8 . --ignore=E501,W503
+
     
     # Rodar testes com pytest
     - name: Rodar testes com pytest
