--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,8 +27,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    # Verificar se pytest está instalado
+    - name: Verificar pytest
+      run: |
+        pip show pytest
+
     # Rodar testes com pytest
     - name: Rodar testes com pytest
       run: |
         pytest --maxfail=1 --disable-warnings -q
-
