--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,29 +10,61 @@ jobs:
   # CI - Testes e verificação
   ci:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10]  # Testando em múltiplas versões do Python
 
     steps:
     - name: Checkout do código
       uses: actions/checkout@v4
-
+    
     # Configuração do Python
-    - name: Configurar Python
+    - name: Configurar Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        python-version: 3.8
-
+        python-version: ${{ matrix.python-version }}
+    
     # Instalar dependências
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    # Verificar se pytest está instalado
-    - name: Verificar pytest
+    
+    # Verificar qualidade do código com flake8
+    - name: Verificar qualidade do código com flake8
       run: |
-        pip show pytest
-
+        pip install flake8
+        flake8 .
+    
     # Rodar testes com pytest
     - name: Rodar testes com pytest
       run: |
-        pytest --maxfail=1 --disable-warnings -q
+        pytest
+
+ # CD - Construção da imagem Docker e deploy
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci  # Certificar-se de que o job 'ci' seja concluído antes
+    if: github.ref == 'refs/heads/main'  # Deploy só ocorre quando o código está na branch 'main'
+
+    steps:
+    - name: Checkout do código
+      uses: actions/checkout@v4
+    
+    # Construir a imagem Docker
+    - name: Construir a imagem Docker
+      run: |
+        docker build -t my-python-app:latest .
+
+    # Login no Docker Hub
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
+    # Push da imagem Docker para o Docker Hub
+    - name: Push da imagem Docker
+      run: |
+        docker tag my-python-app:latest ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-python-app:latest
