--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]  # Testando em múltiplas versões do Python
+        python-version: [3.x]  # Testando em múltiplas versões do Python
 
     steps:
     - name: Checkout do código
