--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
     # Rodar testes com pytest
     - name: Rodar testes com pytest
       run: |
-        pytest --maxfail=5 --disable-warnings --cov=src
+        pytest src/infrastructure/tests --maxfail=5 --disable-warnings --cov=src --cov-report=term
 
   # CD - Construção da imagem Docker e deploy
   cd:
