feat: adicionando a branch do davi pra tambem rodar a action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Test.AI CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "davi" ]
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: [ "main", "dev", "davi" ]
 
 jobs:
   # CI - Testes e verificação
