--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -36,7 +36,7 @@ jobs:
      # Rodar testes com pytest
     - name: Rodar testes com pytest
       run: |
-        PYTHONPATH=$PWD pytest src/infrastructure/tests/unit --cov=src
+        PYTHONPATH=$PWD pytest src/tests/unit --cov=src
       shell: bash
 
   # CD - Construção da imagem Docker e deploy
